# rdecomp

./: .gitignore  Cargo.toml  LICENSE  README.md  temp_test.rs
src/: analysis.rs  cfg.rs  codegen.rs  dataflow.rs  disasm.rs  error.rs  interprocedural.rs  ir.rs  lib.rs  lift.rs  loader.rs  main.rs  pass.rs  project.rs  struct_recovery.rs  typing.rs
src/arch/: mod.rs  x86.rs
src/codegen/: control_flow.rs  emit.rs  mod.rs
test_file/cases/: case10_mixed.c  case1_control.c  case2_calls.c  case3_memory.c  case4_loops.c  case5_switch.c  case6_string.c  case7_complex.c  case8_state_machine.c  case9_algorithms.c  test_project.c
tests/: case_basic.rs  case_complex.rs  cfg_tests.rs  ida_style.rs  interprocedural.rs  ir_structure.rs  loader.rs  opt_matrix.rs
tests/common/: mod.rs
